# Popup_pop

./: CMDPOP_PLAN.md  CONTRIBUTING.md  COPILOT_PROMPT.md  DECISIONS.md  READINESS.md  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  quality-assurance.yml
docs/sprint0/: ARCHITECTURE.md  DATABASE.md  DECISIONS.md  HITL_FLOW.md  ONTOLOGY.md  README.md  TECH_STACK.md
scripts/: check_quality.ps1  check_quality.sh
src/cmdpop/: __init__.py  app.py  main.py
src/cmdpop/config/: __init__.py  settings.py
src/cmdpop/history/: __init__.py  base.py  bash_reader.py  cmd_reader.py  fish_reader.py  powershell_reader.py  zsh_reader.py
src/cmdpop/injector/: __init__.py  base.py  linux.py  mac.py  windows.py
src/cmdpop/storage/: __init__.py  db.py
src/cmdpop/utils/: __init__.py  platform.py
tests/: __init__.py  conftest.py  generate_tests.py  test_dedup.py  test_fuzzy_search.py  test_history_readers.py  test_injector.py  test_storage.py
tests/fixtures/history_samples/: bash.txt  fish.txt  powershell.txt  zsh_extended.txt
