[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmdpop"
version = "0.1.0"
description = "Cross-platform terminal command history picker — like Win+V for your terminal"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["terminal", "history", "cli", "tui", "productivity"]
dependencies = [
    "textual>=0.50.0",
    "rapidfuzz>=3.0.0",
    "aiosqlite>=0.19.0",
    "pynput>=1.7.6",
    "pyautogui>=0.9.54",
    "pyperclip>=1.8.2",
    "rich>=13.0.0",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-textual-snapshot",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
cmdpop = "cmdpop.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
