[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmdpop"
version = "0.1.0"
description = "Cross-platform terminal command history picker — like Win+V for your terminal"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["terminal", "history", "cli", "tui", "productivity"]
dependencies = [
    "textual==0.75.1",
    "rapidfuzz==3.8.1",
    "aiosqlite==3.2.0",
    "pynput==1.7.7",
    "pyautogui==0.9.54",
    "pyperclip==1.8.2",
    "rich==13.7.0",
    "pywin32==308; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.2",
    "pytest-textual-snapshot==0.9.0",
    "ruff==0.3.7",
    "mypy==1.9.0",
    "black==24.3.0",
    "isort==5.13.2",
]

[project.scripts]
cmdpop = "cmdpop.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short --strict-markers"
markers = [
    "integration: integration tests (slow)",
    "snapshot: snapshot tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "PIE",  # flake8-pie
]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
disallow_untyped_calls = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
